# columnar

./: .gitlab-ci.yml  CMakeLists.txt  builder.h  columnar.h  packaging.yml  packversion.cmake
accessor/: CMakeLists.txt  accessorbool.cpp  accessorint.cpp  accessormva.cpp  accessorstr.cpp  accessortraits.h
builder/: CMakeLists.txt  builderint.cpp  builderstr.cpp  builderstr.h  buildertraits.h
cmake/: CPackOptions.cmake.in  GetFastPFOR.cmake  GetPGM.cmake  fastpfor.cmake.in  helpers.cmake  populate_fastpfor.cmake  rev.cmake
cmake/builds/: CommonRpm.cmake  build_macos.cmake  build_rhel.cmake  build_rhel7.cmake  build_rhel8.cmake
columnar/: builder.cpp  builder.h  columnar.cpp  columnar.h
columnar/accessor/: CMakeLists.txt  accessor.cpp  accessor.h  accessorbool.cpp  accessorbool.h  accessorint.cpp  accessorint.h  accessormva.cpp  accessormva.h  accessorstr.cpp  accessorstr.h  accessortraits.cpp  accessortraits.h  attributeheader.cpp  attributeheader.h  check.cpp  check.h
columnar/builder/: CMakeLists.txt  builderbool.cpp  builderint.cpp  builderint.h  builderminmax.h  buildermva.cpp  builderstr.cpp  buildertraits.cpp  buildertraits.h
common/: CMakeLists.txt  blockiterator.h  filter.cpp  filter.h
libfastpfor/: CMakeLists.txt
secondary/: CMakeLists.txt  blockreader.cpp  blockreader.h  builder.cpp  builder.h  common.h  iterator.cpp  iterator.h  pgm.h  secondary.cpp  secondary.h
util/: CMakeLists.txt  codec.cpp  codec.h  delta.cpp  delta.h  filter.cpp  interval.h  reader.cpp  reader.h  util.cpp  util.h  version.cmake
